2007-07-17  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/Spell.py: Complete list of official dictionaries.

2007-07-17  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (convert_notes_13): Only create a
	note if source text was non-empty.

2007-07-17  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/Spell.py:
	* src/Editors/_EditNote.py:
	* src/glade/gramps.glade:
	Improved spell check support.

2007-07-16  Alex Roitman  <shura@gramps-project.org>
	* ChangeLog.old: Add pre-2007 logs.
	* ChangeLog: Remove pre-2007 logs (move to ChangeLog.old).
	* data/grampsxml.rng: Remove stext.
	* data/grampsxml.dtd: Remove stext.
	* src/GrampsDb/_GrampsDbWriteXML.py (dump_source_ref): Do not
	write stext tag.
	* src/GrampsDbUtils/_ReadXML.py (GrampsParser.stop_stext): Import
	stext in sourceref as a note reference.
	* src/GrampsDb/_GrampsBSDDB.py (convert_notes_13): Convert text
	field into a note on upgrade.
	* src/RelLib/_SourceRef.py (__init__): Remove text attribute;
	(set_text,get_text): Remove methods.
	* src/RelLib/_NoteType.py (SOURCE_TEXT): Add new type.

2007-07-16  Piotr Czubaszek  <pioterus@gmail.com>
	* src/plugins/rel_pl.py: Update.

2007-07-15  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/MarkupText.py: support font and color formats.

2007-07-14  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditLdsOrd.py (_setup_fields): Typo.

2007-07-12  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (convert_notes_13): Add privacy to
	LdsOrd on upgrade.
	* src/RelLib/_LdsOrd.py (serialize,unserialize): Add privacy.

2007-07-11  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py (DbManager.__button_press): check for node == None

2007-07-10  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbWriteXML.py (write_date): Write datespan.
	* src/GrampsDbUtils/_ReadXML.py: (start_compound_date): Add new
	method; (start_datespan): Add new method.